feature: migrate Shopizer to Java 21 and Spring Boot 3.5.16
Co-Authored-By: Joao Esteves <joao.esteves@cognition.ai>